--- a/new.css
+++ b/new.css
@@ -1,7 +1,6 @@
 body{
     display:block;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url("https://images.unsplash.com/photo-1564186763535-ebb21ef5277f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z3VpdGFyfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80");
     background-repeat: no-repeat;
     background-size:cover ;
 }
@@ -16,7 +15,6 @@ body{
  {
     height:140px;
     width:100%; 
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKe-ohha2fQ9mQgzXj3ljbMFJgdAxhDnpvow&usqp=CAU");
     background-size: 300px;
     background-repeat: no-repeat;
     border-bottom:2px solid #fafdfc;
@@ -36,7 +34,7 @@ button{
     height:35px;
     width:100px;
 
-    background-image: linear-gradient(black,white);
+    background-image: linear-gradient(rgb(163, 34, 34),white);
     border-radius: 10px;
 
     
@@ -63,7 +61,7 @@ table{
     
 }
 table tr :hover{
-    background-color:lightgray;
+    background-color:blue;
 
 }
 img{
